--- a/community.html
+++ b/community.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button class="summonthecow"><a href="homepage.html" onclick="communityentering()">go back to home</a></button>
+    <button class="summonthecow"><a href="index.html" onclick="communityentering()">go back to home</a></button>
     The community tab is currently under development! Please go to another part of the website!
 
     <div id="imageContainer" style="text-align: center;">
